style.css
/* ... */
/*  --------------------------------------------------------------------------- */

/*  ---------------------------------- HEADER --------------------------------- */

.header {
  display: flex;
  align-items: center;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 999;
  background-color: var(--bg-light1);
  padding: 12px 0;
  transition: background-color 0.4s linear, transform 0.2s ease-in-out;
  /* box-shadow: 0 0 10px rgba(0, 0, 0, .19); */
}

.header.dark {
  background-color: var(--bg-night2);
  color: var(--white);
}

.header.opaque {
  transform: translateY(-100%);
}

.navbar {
  position: relative;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.navbar.container {
  display: flex;
  flex-wrap: inherit;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
}

.logo {
  display: flex;
  align-items: center;
  position: relative;
}

.logo:hover > .logo-img {
  scale: 1;
}

.logo-img {
  width: 45px;
  scale: 0;
  transition: scale 0.3s ease-in-out;
}

.author-name {
  color: var(--black);
  height: fit-content;
  font-family: "Outfit", sans-serif;
  font-size: clamp(
    1.25rem,
    1.1590909090909092rem + 0.45454545454545453vw,
    1.375rem
  );
  font-weight: 700;
  cursor: pointer;
  user-select: none;
  margin-right: 1rem;
  transition: color 0.2s linear;
}

.author-name.dark {
  color: var(--white);
}

.header-ul {
  display: flex;
  /* gap: 20px; */
  font-size: clamp(
    1.125rem,
    1.0795454545454546rem + 0.22727272727272727vw,
    1.25rem
  );
  padding-inline-start: 0px;
  margin: 0;
}

.header-li {
  display: flex;
  align-items: center;
  margin-left: 20px;
}

.nav-link-header {
  color: var(--black);
  font-weight: 700;
  padding: 4px 8px;
  border-radius: 0.375rem;
  transition: color 0.2s linear, background-color 0.4s linear;
}

.nav-link-header.dark {
  color: var(--white);
}

.nav-link-header:hover:not(.active) {
  color: var(--accent-color);
  transition: all 0.2s linear;
}

.nav-link-header.dark:hover:not(.active) {
  color: var(--accent-color-dk);
  transition: all 0.2s linear;
}

.active {
  color: var(--white);
  background-color: var(--accent-color);
  transition: color 0.1s linear, background-color 0.4s linear;
}

.active.dark {
  background-color: var(--accent-color-dk);
  transition: background-color 0.4s linear;
}

.dark-mode-toggle-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 26px;
  width: 50px;
  background-color: var(--lightdetail2);
  border-radius: 999px;
  position: relative;
  transition: all 0.3s linear;
  cursor: pointer;
}

.dark-mode-toggle-container:hover .dark-mode-tooltip {
  opacity: 1;
}

.dark-mode-toggle-container:hover {
  background-color: var(--accent-color);
}

.dark-mode-toggle-container.dark {
  background-color: var(--nightdetail2);
  transition: all 0.3s linear;
}

.dark-mode-toggle-container.dark:hover {
  background-color: var(--accent-color-dk);
}

.dark-mode-toggle {
  width: 100%;
  height: 26px;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  cursor: pointer;
  margin: 0;
}

.dark-mode-toggle-ball {
  background-color: var(--white);
  border-radius: 999px;
  position: absolute;
  left: 3px;
  height: 20px;
  width: 20px;
  transform: translateX(0px);
  transition: transform 0.2s linear;
}

.dark-mode-toggle:checked ~ .dark-mode-toggle-ball {
  transform: translateX(24px);
}

.dark-mode-tooltip {
  width: max-content;
  position: absolute;
  top: 100%;
  left: 50%;
  color: var(--black);
  font-size: 1rem;
  background-color: var(--lightdetail2);
  padding: 4px 8px;
  border-radius: 0.375rem;
  margin-top: 5px;
  transform: translateX(-50%);
  pointer-events: none;
  user-select: none;
  opacity: 0;
  transition: background-color 0.4s linear, color 0.3s linear,
    opacity 0.2s linear;
}

.dark-mode-tooltip.dark {
  background-color: var(--bg-night1);
  color: var(--white);
}

.dark-mode-span {
  display: none;
  width: fit-content;
}

.navbuttons {
  display: none;
  position: relative;
  z-index: 999;
  width: 36px;
  height: 36px;
  cursor: pointer;
}

.navbar-button {
  width: 36px;
  height: 3px;
  background-color: transparent;
  transition: all 0.2s ease-in-out;
}

.navbar-button::before,
.navbar-button::after {
  content: "";
  height: 3px;
  background-color: var(--black);
  position: absolute;
  transition: all 0.2s ease-in-out;
}

.navbar-button::before {
  width: 36px;
  transform: translateY(-6px);
}
.navbar-button::after {
  width: 26px;
  transform: translateY(6px);
  right: 0;
}

.navbuttons.open-nav > .navbar-button::before {
  transform: rotate(45deg);
}
.navbuttons.open-nav > .navbar-button::after {
  transform: rotate(-45deg);
  width: 36px;
}

.navbar-button.dark::before,
.navbar-button.dark::after {
  background-color: var(--white);
}

/*  --------------------------------------------------------------------------- */

/*  ------------------------------------ MAIN --------------------------------- */

.hero-section {
  background-color: var(--bg-light1);
  position: relative;
  z-index: 1;
  transition: background-color 0.4s linear;
  overflow: hidden;
}

.hero-section.dark {
  background-color: var(--bg-night2);
}

.hero-container {
  height: 100svh;
  display: flex;
}

.hero-block-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-family: "Outfit", sans-serif;
  cursor: default;
  width: 100%;
}

.hero-title {
  width: 100%;
  font-weight: 600;
  margin-bottom: 4rem;
  max-width: 16ch;
}

.hero-subtitle {
  max-width: 38ch;
  font-size: clamp(1rem, 0.8571428571428572rem + 0.7142857142857143vw, 1.5rem);
  font-weight: 400;
  line-height: 1.3;
  margin-bottom: 2rem;
}

.hero-button-div {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
}
/* ... */

